--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <button id="0">0</button>
         <button id="=" class="igual operador">=</button>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
